<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">run IOTA</string>
    <string name="app_settings">run IOTA</string>
    <string name="app_email">iota@runplay.com</string>
    <string name="app_issue_reporter">Issue Reporter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="all_transactions">All:</string>
    <string name="invalid_transactions">Invalid:</string>
    <string name="new_transactions">New:</string>
    <string name="random_transaction_requests">Random:</string>
    <string name="sent_transactions">Sent:</string>
    <string name="connection_type">type:</string>
    <string name="na">N/A</string>
    <string name="seed">Seed:</string>
    <string name="password">Password:</string>
    <string name="current_password">Current password:</string>
    <string name="new_password">New password:</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="copy_seed">Copy Seed?</string>
    <string name="generate_seed">Create New Seed</string>
    <string name="transactions_to_request">Processing</string>
    <string name="tips">Tips (total)</string>
    <string name="transactions">Transactions</string>
    <string name="transfer">Transfer</string>
    <string name="transfers">Actions</string>
    <string name="addresses">Receive</string>
    <string name="search">Search</string>
    <string name="account_balance">Account Balance:</string>
    <string name="account_balance_default">0 i</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="address">Address</string>
    <string name="hash">Hash</string>
    <string name="amount">Amount</string>
    <string name="message_optional">Message (optional, A-Z,a-z only)</string>
    <string name="tag_optional">Tag (optional, A-Z,a-z and 9 only)</string>
    <string name="neighbor_ip">Neighbor IP:</string>
    <string name="next">Next</string>
    <string name="auto">Auto</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="forced">Forced</string>
    <string name="clear">Clear</string>
    <string name="add_more">+ Add</string>
    <string name="pay">Pay</string>
    <string name="view">View</string>
    <string name="info_transfer">Transfer</string>
    <string name="info_address_already">Edit existing payment address</string>
    <string name="name">Name</string>
    <string name="print">Print</string>
    <string name="print_trinity">Trinity wallet compatible</string>
    <string name="print_text">Print a backup copy of the Seed for this wallet</string>
    <string name="print_error">Problem creating Image for printing, try again</string>
    <string name="no_seed_data">No seed data found</string>
    <string name="info_nudge">Nudge</string>
    <string name="info_resend">Resend</string>
    <string name="info_audit">Audit</string>
    <string name="info_refresh">Refresh</string>
    <string name="info_new_address">Address</string>
    <string name="info_new_attach">Attach</string>
    <string name="info_first_load">First load</string>
    <string name="validating">Validating</string>
    <string name="edit">Edit</string>
    <string name="pay_now">Pay Now</string>
    <string name="volume">vol</string>
    <string name="price">price</string>
    <string name="from">From</string>
    <string name="remainder">Balance</string>
    <string name="paste">Paste</string>
    <string name="copy">Copy</string>
    <string name="qr">QR</string>
    <string name="message_fix_import">Fix import address values before proceeding</string>
    <string name="title_seeds">Seeds</string>
    <string name="wallet">Wallet</string>
    <string name="used_address">Used address</string>
    <string name="attached_address">Attached</string>
    <string name="used_address_copy">Used addresses are finished, never use again</string>
    <string name="randomise">Randomise</string>
    <string name="usedAddressOk">All OK, no used addresses with &gt; Zero balances</string>
    <string name="usedAddressNoOk">Check your used addresses, the app found </string>
    <string name="usedAddressWarn">Warning, you should transfer the value from the used non zero address in the list</string>
    <string name="usedAddressSettings">Warning, you have non Zero used address, go to Settings and check display Used Addresses</string>
    <string name="switch_wallet">Switch Wallet</string>
    <string name="switch_wallet_text">Select wallet from below</string>
    <string name="edit_wallet_reload_text">Wipe history, and perform a first load again on this Seed</string>
    <string name="edit_wallet_reload_btn">Reload</string>
    <string name="buttons_ok">OK</string>
    <string name="buttons_cancel">Cancel</string>
    <string name="buttons_login">Use Seed</string>
    <string name="buttons_login_password">Login</string>
    <string name="buttons_save">Save</string>
    <string name="buttons_show">Show</string>
    <string name="buttons_again">Do not notify</string>
    <string name="buttons_share">Share</string>
    <string name="buttons_backup">Backup</string>
    <string name="buttons_finished">Finished</string>
    <string name="buttons_change">Change</string>
    <string name="messages_shortcuts_not_available">Please login first.</string>
    <string name="messages_invalid_search">Please enter a valid bundle, tag, address, approvees or transaction.</string>
    <string name="messages_enter_neighbor_address">Valid IOTA node required (ip/www) + (port)</string>
    <string name="messages_neighbor_address_forgiven">IP-Address already added.</string>
    <string name="messages_network_remote_error">Node issue, trying again / switching to a new node.</string>
    <string name="messages_network_access_error">Sorry, command is not available on this node, try switching.</string>
    <string name="menu_group_misc">Misc</string>
    <string name="menu_wallet">Active Wallet</string>
    <string name="menu_choose_wallet">All Wallets</string>
    <string name="menu_settings">@string/action_settings</string>
    <string name="menu_about">App Details</string>
    <string name="menu_about_summary">Details about run IOTA app</string>
    <string name="menu_logout">Delete data</string>
    <string name="menu_logout_summary">Log out of app and delete all stored data, you should backup all seeds before performing this action.</string>
    <string name="menu_group_network">Network</string>
    <string name="theme_choose">Change colour</string>
    <string name="theme_text">Change the colour theme of the app</string>
    <string name="theme_brand">Brownish</string>
    <string name="theme_brand_text">run IOTA wallet Brown Theme coloured</string>
    <string name="theme_blue">Blue Sea</string>
    <string name="theme_blue_text">Dark and light Blue Theme coloured</string>
    <string name="theme_pink">Pretty Pink</string>
    <string name="theme_pink_text">Pink, sweet, playful, cute, romantic, feminine</string>
    <string name="theme_dg">Night Garden</string>
    <string name="theme_dg_text">Dark Green based Theme coloured</string>
    <string name="theme_green">Go Green</string>
    <string name="theme_green_text">Bold and Bright Green Theme coloured</string>
    <string name="theme_dn">Twilight</string>
    <string name="theme_dn_text">Dark and dusky theme colored</string>
    <string name="theme_snow">Snow</string>
    <string name="theme_snow_text">So soft and mellow White Theme</string>
    <string name="theme_purple">Purple Haze</string>
    <string name="theme_purple_text">Purple mellow Theme coloured</string>
    <string name="theme_bw">Chaplin</string>
    <string name="theme_bw_text">Black on White Theme coloured</string>
    <string name="theme_red">Rage</string>
    <string name="theme_red_text">Red on White Theme coloured</string>
    <string name="theme_lgbota">LGBOTA</string>
    <string name="theme_lgbota_text">LGBT Theme colour</string>
    <string name="tor_title">Tor - Orbot</string>
    <string name="settings_node_protocol_title">Node protocol</string>
    <string name="settings_node_protocol_summary">The protocol of the node you would like to connect</string>
    <string name="settings_node_ip_title">Node IP or www domain</string>
    <string name="settings_node_ip_summary">The IP address of the node you would like to connect</string>
    <string name="settings_node_port_title">Node port</string>
    <string name="settings_node_port_summary">The port of the node you would like to connect</string>
    <string name="settings_password_protection_title">Security</string>
    <string name="settings_password_protection_summary">Seed and password settings</string>
    <string name="settings_change_password_title">Change Password</string>
    <string name="settings_change_password_summary">Change current password</string>
    <string name="settings_header_misc_title">App Settings</string>
    <string name="settings_header_misc_summary">Nudge attempts, PoW, First load</string>
    <string name="settings_display_title">Display Settings</string>
    <string name="settings_display_summary">Options to set how you view your wallet</string>
    <string name="settings_auto_attach">Address auto attach</string>
    <string name="settings_auto_attach_summary">Minimum number of Empty value pooled addresses</string>
    <string name="settings_auto_nudge">Nudge attempts</string>
    <string name="settings_auto_nudge_summary">Number of times the app will Nudge (promote) a transfer before giving up</string>
    <string name="settings_cancel_transfer">Ignore Transfer</string>
    <string name="settings_cancel_transfer_summary">Time period in hours where a not completed Transfer can be marked as ignored by the wallet</string>
    <string name="settings_first_load">First Load Addresses</string>
    <string name="settings_first_load_summary">Number of Addresses the app will check up to when performing the First load of a seed</string>
    <string name="settings_first_range">First Load Range</string>
    <string name="settings_first_range_summary">Number of empty Addresses the app will check after finding a balance before stopping</string>
    <string name="settings_local_pow_title">Local PoW</string>
    <string name="settings_local_pow_summary">Do the Proof of work locally</string>
    <string name="settings_tor_summary">Enable anonymous use of Iota through Tor</string>
    <string name="settings_cancelled">Double and No complete Transfers</string>
    <string name="settings_cancelled_summary">Show Double spend and No complete transfers in the \'Actions\' section</string>
    <string name="settings_used">Used Addresses</string>
    <string name="settings_used_summary">Show used Addresses in the \'Receive\' section</string>
    <string name="settings_attachments">Attachments</string>
    <string name="settings_attachments_summary">Show Address attachments in the \'Actions\' section</string>
    <string name="settings_wallet_currency_title">Currency</string>
    <string name="settings_wallet_currency_summary">The currency in which the wallet value is displayed</string>
    <string name="settings_address_security">Address security</string>
    <string name="settings_address_security_summary">Default address security setting when generating new addresses</string>
    <string name="settings_auto_logout">Auto Logout</string>
    <string name="settings_auto_logout_summary">Logout app after inactive use</string>
    <string name="settings_min_weight">Min Weight</string>
    <string name="settings_min_weight_summary">Min Weight value to use for transfers</string>
    <string name="help">Help and FAQ</string>
</resources>