<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <Preference
        android:key="preference_change_password"
        android:summary="@string/settings_change_password_summary"
        android:title="@string/settings_change_password_title" />


    <ListPreference
        android:defaultValue="2"
        android:entries="@array/autoLogoutString"
        android:entryValues="@array/autoLogout"
        android:key="preference_auto_logout"
        android:summary="@string/settings_auto_logout_summary"
        android:title="@string/settings_auto_logout" />
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/listSecurity"
        android:entryValues="@array/listSecurity"
        android:key="preference_address_security"
        android:summary="@string/settings_address_security_summary"
        android:title="@string/settings_address_security" />
    <ListPreference
        android:defaultValue="14"
        android:entries="@array/listMinWeight"
        android:entryValues="@array/listMinWeight"
        android:key="preference_min_weight"
        android:summary="@string/settings_min_weight_summary"
        android:title="@string/settings_min_weight" />
    <Preference

        android:key="preference_show_tor"
        android:summary="@string/settings_tor_summary"
        android:title="@string/tor_title" />
    <!--
    removed while not have messaging
    <Preference
        android:key="preference_show_msgseed"
        android:summary="@string/settings_show_msgseed_summary"
        android:title="@string/settings_show_msgseed_title" />
    -->
    <Preference
        android:key="preference_wipe_out"
        android:summary="@string/menu_logout_summary"
        android:title="@string/menu_logout" />
</PreferenceScreen>
